# tauri-plugin-file-metadata

./: .gitignore  Cargo.toml  LICENSE  README.md  api-iife.js  build.rs  package.json  rollup.config.js  tsconfig.json
android/: build.gradle.kts  settings.gradle
android/src/main/java/: FileMetadataPlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/FileMetadataPlugin/: FileMetadataPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_file_metadata.toml
permissions/schemas/: schema.json
src/: lib.rs
